--- a/game.html
+++ b/game.html
@@ -2,19 +2,22 @@
 
 <head>
   <title>Snake Game</title>
+  <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
   <style>
     canvas {
-      background-color: #e0e5db;
       background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%239cac92' fill-opacity='0.4' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
-      border: 1px solid #9aac92;
-      display: block;
-      margin: 0 auto;
     }
   </style>
 </head>
 
-<body>
-  <canvas id="snake" width="475" height="475"></canvas>
+<body class="bg-gray-200 h-screen">
+  <div class="container mx-auto h-full flex justify-center items-center">
+    <div class="w-1/1">
+      <h1 class="mb-2 text-center">Score: <span class="score"></span></h1>
+
+      <canvas id="snake" width="475" height="475" class="shadow-lg bg-green-700 border border-green-800"></canvas>
+    </div>
+  </div>
 </body>
 
 <script src="coordinate.js"></script>
