add playing field class

--- a/game.html
+++ b/game.html
@@ -21,6 +21,7 @@
   </div>
 </body>
 
+<script src="playing-field.js"></script>
 <script src="coordinate.js"></script>
 <script src="snake.js"></script>
 <script src="game.js"></script>
