move files to src directory

--- a/game.html
+++ b/game.html
@@ -21,10 +21,10 @@
   </div>
 </body>
 
-<script src="playing-field.js"></script>
-<script src="coordinate.js"></script>
-<script src="snake.js"></script>
-<script src="game.js"></script>
+<script src="src/playing-field.js"></script>
+<script src="src/coordinate.js"></script>
+<script src="src/snake.js"></script>
+<script src="src/game.js"></script>
 <script>
   const game = new Game()
   game.start()
