add direction class

--- a/game.html
+++ b/game.html
@@ -23,6 +23,7 @@
 
 <script src="src/playing-field.js"></script>
 <script src="src/coordinate.js"></script>
+<script src="src/direction.js"></script>
 <script src="src/snake.js"></script>
 <script src="src/game.js"></script>
 <script>
