improve score styling

--- a/game.html
+++ b/game.html
@@ -13,7 +13,10 @@
 <body class="bg-gray-200 h-screen">
   <div class="container mx-auto h-full flex justify-center items-center">
     <div class="w-1/1">
-      <h1 class="mb-2 text-center">Score: <span id="score"></span></h1>
+      <h3 class="mb-2 text-left text-sm text-gray-600">
+        <span id="score" class="text-2xl font-extrabold text-gray-800"> </span>
+        Treats
+      </h3>
       <h2 class="mb-2 text-center font-bold text-red-600" id="error" class="text-red-600"></h2>
 
       <canvas id="snake" width="475" height="475" class="shadow-lg bg-green-700 border border-green-800"></canvas>
