--- a/game.html
+++ b/game.html
@@ -23,17 +23,55 @@
 </head>
 
 <body class="bg-gray-200 h-screen">
-  <div class="container mx-auto h-full flex justify-center items-center">
-    <div class="w-1/1">
-      <h3 class="mb-2 text-left text-sm text-gray-600">
+  <div class="container mx-auto flex items-end pt-20 mb-4">
+    <div class="w-1/3"></div>
+    <div class="w-1/6 content-end">
+      <h3 class="text-left text-sm text-gray-600">
         <span id="score" class="text-2xl font-extrabold text-gray-800"> </span>
         Treats
       </h3>
-      <h2 class="mb-2 text-center font-bold text-red-600" id="error" class="text-red-600"></h2>
-
-      <canvas id="snake" width="475" height="475" class="shadow-lg bg-green-700 border border-green-800"></canvas>
     </div>
+
+    <div class="w-1/6 text-right">
+      <button id="speed-slow"
+        class="bg-transparent hover:bg-gray-300 text-gray-600 font-semibold hover:text-gray-700 py-1 px-2 border border-gray-400 hover:border-transparent rounded text-xs">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
+          stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+          class="feather feather-chevron-right">
+          <polyline points="9 18 15 12 9 6"></polyline>
+        </svg>
+      </button>
+      <button id="speed-medium"
+        class="bg-transparent hover:bg-gray-600 text-gray-600 font-semibold hover:text-gray-300 py-1 px-2 border border-gray-400 hover:border-transparent rounded text-xs">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
+          stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+          class="feather feather-chevrons-right">
+          <polyline points="13 17 18 12 13 7"></polyline>
+          <polyline points="6 17 11 12 6 7"></polyline>
+        </svg>
+      </button>
+      <button id="speed-fast"
+        class="bg-transparent hover:bg-gray-900 text-gray-600 font-semibold hover:text-gray-200 py-1 px-2 border border-gray-400 hover:border-transparent rounded text-xs">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
+          stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+          class="feather feather-fast-forward">
+          <polygon points="13 19 22 12 13 5 13 19"></polygon>
+          <polygon points="2 19 11 12 2 5 2 19"></polygon>
+        </svg>
+      </button>
+    </div>
+
   </div>
+  <div class="w-1/3"></div>
+
+  <div class="container mx-auto flex justify-center items-center">
+    <h2 class="mb-2 text-center font-bold text-red-600" id="error" class="text-red-600"></h2>
+  </div>
+
+  <div class="container mx-auto flex justify-center items-center">
+    <canvas id="snake" width="475" height="475" class="shadow-lg bg-green-700 border border-green-800"></canvas>
+  </div>
+
 </body>
 
 <script src="src/playing-field.js"></script>
