remove unused icons

--- a/game.html
+++ b/game.html
@@ -34,7 +34,7 @@
 
     <div class="w-1/6 text-right">
       <button id="speed-slow"
-        class="bg-transparent hover:bg-gray-300 text-gray-600 font-semibold hover:text-gray-700 py-1 px-2 border border-gray-400 hover:border-transparent rounded text-xs">
+        class="bg-transparent hover:bg-gray-300 text-gray-600 font-semibold hover:text-gray-700 py-1 px-2 border border-gray-400 hover:border-transparent rounded">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
           stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
           class="feather feather-chevron-right">
@@ -42,7 +42,7 @@
         </svg>
       </button>
       <button id="speed-medium"
-        class="bg-transparent hover:bg-gray-600 text-gray-600 font-semibold hover:text-gray-300 py-1 px-2 border border-gray-400 hover:border-transparent rounded text-xs">
+        class="bg-transparent hover:bg-gray-600 text-gray-600 font-semibold hover:text-gray-300 py-1 px-2 border border-gray-400 hover:border-transparent rounded">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
           stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
           class="feather feather-chevrons-right">
@@ -51,7 +51,7 @@
         </svg>
       </button>
       <button id="speed-fast"
-        class="bg-transparent hover:bg-gray-900 text-gray-600 font-semibold hover:text-gray-200 py-1 px-2 border border-gray-400 hover:border-transparent rounded text-xs">
+        class="bg-transparent hover:bg-gray-900 text-gray-600 font-semibold hover:text-gray-200 py-1 px-2 border border-gray-400 hover:border-transparent rounded">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
           stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
           class="feather feather-fast-forward">
